2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/unit.hh (model_unit_source::simple_name_map): New field.
	(model_unit_source::name_map): Removed.
	(model_unit_source::resolving): New field.
	(model_unit_source): Initialize it.
	(model_unit_source::resolve): Declare.
	* model/import.cc (check_referenced): Removed old comment.
	* model/unit.cc (check_imports): Removed old comment.
	(resolve): Initialize simple_name_map.  Don't resolve imports.
	(check_imports): Resolve all imports here.
	(look_up_name): Lazily resolve imports.
	(resolve): New overload.

2005-10-24  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (headers): Added intersect.hh.
	(model_sources): Added intersect.cc.
	* unify.cc (compute_glb): Make a new model_intersection_type.
	* typedefs.hh: Include intersect.hh.
	* model/intersect.cc: New file.
	* model/intersect.hh: New file.

2005-10-24  Tom Tromey  <tromey@redhat.com>

	* model/typemap.cc (capture_conversion_p): Removed.
	* model/class.hh (model_class::can_capture_p): Removed.
	* model/wildcard.hh (model_wildcard::can_capture_p): Removed.
	* model/typemap.hh (model_type_map::capture_conversion_p):
	Removed.
	* model/classinst.cc (capture_conversion_p): Removed.
	* model/classinst.hh (model_class_instance::capture_conversion_p):
	Removed.
	* conversions.cc (widening_reference_conversion): Don't call
	capture_conversion_p.

2005-10-22  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* dump.cc (pretty_printer::visit_generic_invocation): Flesh out
	the "method_invocation" variant.  Differentiate the "new_primary"
	variant from the "new" variant.

2005-10-21  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh
	(bytecode_generator::visit_generic_invocation): New method.
	* dump.cc (dumper::visit_generic_invocation): New method.
	* fold.cc (fold_visitor::visit_generic_invocation): New method.
	* defassign.cc
	(definite_assignment_visitor::visit_generic_invocation): New
	method.